[gd_scene load_steps=6 format=3 uid="uid://b2lul11ul6vst"]

[ext_resource type="Script" path="res://npcs/npc.gd" id="1_2rc03"]
[ext_resource type="Texture2D" uid="uid://bpx20526kqc1n" path="res://assets/PNG/ufoBlue.png" id="2_mfoyh"]
[ext_resource type="Texture2D" uid="uid://c2ult01rjhvo8" path="res://assets/PNG/ufoGreen.png" id="3_trasp"]
[ext_resource type="Texture2D" uid="uid://jrm3u7kycsp2" path="res://assets/PNG/ufoRed.png" id="4_r2km8"]
[ext_resource type="Texture2D" uid="uid://f1dffolqi0ch" path="res://assets/PNG/ufoYellow.png" id="5_xf0ug"]

[node name="NPC" type="Node2D"]
script = ExtResource("1_2rc03")

[node name="SkinSprite1" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_mfoyh")

[node name="SkinSprite2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_trasp")

[node name="SkinSprite3" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_r2km8")

[node name="SkinSprite4" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_xf0ug")
